# dynamic-genUI

./: .env.example  README.md  client.py  components.py  config.py  handlers.py  llms-ctx-components.txt  llms-ctx-monster-ui.txt  pyproject.toml  requirements.txt
dynam_ui/: main.py
dynamic_ui/: client.py  components.py  config.py  handlers.py  llms-ctx-components.txt  llms-ctx-fast-html.txt  llms-ctx-monster-ui.txt  main.py
